coverage by tests - client controller